deploy: bbdea00f08606e342f6c56faecab501d95010ab7

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <article class="post-list h-feed">
 <div class=post-header>
 <header>
-<h1 class="p-name post-title"><a class=u-url href=/posts/hello-world/>hello-world</a></h1>
+<h1 class="p-name post-title"><a class=u-url href=/posts/hello-world.html>hello-world</a></h1>
 </header>
 </div>
 <div class="content post-summary p-summary">
@@ -64,7 +64,7 @@ New post using asciidoctor, Github Pages, Hugo
 </div>
 <div class=post-info>
 <div class="post-date dt-published">2022-08-15 20:34:11 GMT+0900 (+0900)</div>
-<a class="post-hidden-url u-url" href=https://hnjae.github.io/posts/hello-world/>https://hnjae.github.io/posts/hello-world/</a>
+<a class="post-hidden-url u-url" href=https://hnjae.github.io/posts/hello-world.html>https://hnjae.github.io/posts/hello-world.html</a>
 <a href=https://hnjae.github.io/ class="p-name p-author post-hidden-author h-card" rel=me>Hyunjae Kim</a>
 <div class=post-taxonomies>
 </div>
