--- a/categories.html
+++ b/categories.html
@@ -18,7 +18,7 @@
 <meta property="og:title" content="Categories">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://hnjae.github.io/categories/">
+<meta property="og:url" content="https://hnjae.github.io/categories.html">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="Categories">
 <meta name=twitter:description content>
