--- a/tags.html
+++ b/tags.html
@@ -18,7 +18,7 @@
 <meta property="og:title" content="Tags">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://hnjae.github.io/tags/">
+<meta property="og:url" content="https://hnjae.github.io/tags.html">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="Tags">
 <meta name=twitter:description content>
